--- a/dev/templates/template/header.pug
+++ b/dev/templates/template/header.pug
@@ -75,7 +75,7 @@ header.head
 							svg
 								use(xlink:href='/img/sprite.svg#more')
 						ul.head-menu_sublist
-							li.head-mobile-subitem
+							li.head-mobile-subitem.active
 								span.head-mobile-subitem_value
 									| John Doe
 							li.head-mobile-subitem
