--- a/dev/templates/home-credit.pug
+++ b/dev/templates/home-credit.pug
@@ -64,9 +64,7 @@ block content
 											strong
 												| Your password appeared in multiple data breach
 												| records for jmurack@gmail.com
-									li.white-block-list-item
-										button.btn.-blue
-											| Vie All Alerts
+									button.btn.-blue Vie All Alerts
 						.white-block
 							.white-block_head
 								h5.white-block_title.row
@@ -107,9 +105,7 @@ block content
 											strong
 												| Your password appeared in multiple data breach
 												| records for jmurack@gmail.com
-									li.white-block-list-item
-										button.btn.-blue
-											| Vie All Alerts
+									button.btn.-blue Vie All Alerts
 						.white-block.-large
 							.white-block_head
 								h5.white-block_title.row
@@ -129,8 +125,7 @@ block content
 												use(xlink:href="/img/sprite.svg#help")
 										p.credit-monitoring-gray
 											span According to data collected by Experian
-										button.btn.-blue
-											| View Details
+										button.btn.-blue View Details
 									.white-block-list-item_right
 										.white-block-rating_img
 											.white-block-rating_img_scoreStart
@@ -158,9 +153,7 @@ block content
 									span Active
 							.white-block-body
 								.white-block-alerts We’ve removed #[strong 16] pieces of exposed personal information for you, minimizing your risk of identity theft, hacks and spam.
-								br
-								button.btn.-blue.-bi
-									| View Removed Information
+								button.btn.-blue.-bi View Removed Information
 					.gray-block
 						h6.gray-block-title ID Risk Score
 						.gray-actions
