--- a/dev/templates/home-plan.pug
+++ b/dev/templates/home-plan.pug
@@ -64,9 +64,7 @@ block content
 											strong
 												| Your password appeared in multiple data breach
 												| records for jmurack@gmail.com
-									li.white-block-list-item
-										button.btn.-blue
-											| View All Alerts
+									button.btn.-blue View All Alerts
 						.white-block
 							.white-block_head
 								h5.white-block_title.row
@@ -102,9 +100,7 @@ block content
 										.white-block-list-item_content
 											span Jan 17 at 5:22 AM
 											strong Your password appeared in multiple data breach records for jmurack@gmail.com
-									li.white-block-list-item
-										button.btn.-blue
-											| View All Alerts
+									button.btn.-blue View All Alerts
 						.white-block.-upgrade
 							.white-upgrade
 								h5.white-upgrade-title Upgrade Plan
