hot fix from 04.09

--- a/dev/stylus/front.styl
+++ b/dev/stylus/front.styl
@@ -923,6 +923,9 @@ body
 			display none
 			+desktop()
 				display block
+	&-right
+		+desktop()
+			max-width calc(360px + 56px)
 .white
 	&-items
 		margin-top 50px
