--- a/dev/templates/home-credit.pug
+++ b/dev/templates/home-credit.pug
@@ -154,7 +154,7 @@ block content
 							.white-block-body
 								.white-block-alerts We’ve removed #[strong 16] pieces of exposed personal information for you, minimizing your risk of identity theft, hacks and spam.
 								button.btn.-blue.-bi View Removed Information
-					.gray-block
+					.gray-block.home-right
 						h6.gray-block-title ID Risk Score
 						.gray-actions
 							span Breach Risk Score
