--- a/dev/templates/home-plan.pug
+++ b/dev/templates/home-plan.pug
@@ -153,7 +153,7 @@ block content
 												.white-block-list-item_line
 												.white-block-list-item_line
 												.white-block-list-item_line.-short
-					.gray-block
+					.gray-block.home-right
 						h6.gray-block-title ID Risk Score
 						.gray-actions
 							span Breach Risk Score
