--- a/dev/templates/home.pug
+++ b/dev/templates/home.pug
@@ -160,7 +160,7 @@ block content
 												.white-block-list-item_line
 												.white-block-list-item_line
 												.white-block-list-item_line.-short
-					.gray-block
+					.gray-block.home-right
 						h6.gray-block-title ID Risk Score
 						.gray-actions
 							span Breach Risk Score
