hot fix from 06.09

--- a/dev/stylus/front.styl
+++ b/dev/stylus/front.styl
@@ -181,8 +181,8 @@ body
 				display: flex !important
 				align-items: center
 				justify-content: center
-				svg
-					wh 25px
+				img
+					wh 24px
 			.head-menu_sublist
 				w 256px
 	&-mobile
