--- a/dev/templates/template/header.pug
+++ b/dev/templates/template/header.pug
@@ -92,8 +92,7 @@ header.head
 								span.head-mobile-subitem_value
 									| Add Family Member
 					.head-actions-link.head-menu_item.-dropdown.head-actions-user
-						svg
-							use(xlink:href='/img/sprite.svg#account_circle')
+						img(src="/img/account_circle.png")
 						ul.head-menu_sublist
 							li.head-mobile-subitem
 								span.head-mobile-subitem_value
